# trading-bot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: config.dev.yaml  config.prod.yaml
migrations/: env.py
migrations/versions/: fcaf9f50251a_create_orders_position_table.py
src/trading_bot/core/domain/entities/: order.py  position.py  trade_setup.py
src/trading_bot/core/domain/exceptions/: base.py  domain.py  trading.py
src/trading_bot/core/domain/value_objects/: event.py  signal.py  symbol.py  take_profit.py  trading.py
src/trading_bot/infrastructure/: exceptions.py
src/trading_bot/infrastructure/config/: provider.py
src/trading_bot/infrastructure/database/: uow.py
src/trading_bot/infrastructure/database/models/: __init__.py  order.py  position.py
src/trading_bot/infrastructure/database/repositories/: __init__.py  order.py  position.py
src/trading_bot/infrastructure/discord/: client.py
src/trading_bot/infrastructure/discord/parsers/: algo.py  andre.py  base.py  elite.py  hasseb.py  registry.py  voyager.py
src/trading_bot/infrastructure/exchanges/: composite.py
src/trading_bot/infrastructure/exchanges/bybit/: __init__.py  adapter.py  base.py  mapper.py
src/trading_bot/main/: bootstrap.py
src/trading_bot/main/config/: logging.py  settings.py
src/trading_bot/main/config/models/: account.py  discord.py  postgres.py  sqlalchemy.py
src/trading_bot/main/di/: setup.py
src/trading_bot/main/runners/: discord.py  tracker.py
src/trading_bot/presentation/cli/: main.py
(+29 files in other folders)
